Done with kmom02.

--- a/content/redovisning/02_kmom02.md
+++ b/content/redovisning/02_kmom02.md
@@ -3,4 +3,31 @@
 Redovisning kmom02
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/02_kmom02.md`.
+**Modellering likt UML jämfört med verktyg som PHPDocumentor, konceptet make doc**  
+PHPDocumentor och UML-modellering kompletterar varandra i kodningsprocessen. I de olika stegen
+av projektets utveckling har man mer nytta av den ena eller den andra: i inledningsfasen, när man
+skissar nya projekt, använder man sig av modelleringsverktyg som UML. Sedan
+sätter man om skiss till kod, testar, bearbetar och kommenterar koden medan man
+utvecklar den. PHPDocumentor levererar överblickbar dokumentation för (slut)produkten -
+den skannar igenom alla klassfiler och bygger upp klickbar dokumentation för implementerade
+metoder och medlemsvariabler; med hjälp av make doc kan man automatgenerera dokumentation
+för sitt projekt som kan delas med andra programmerare - mycket praktiskt och smidigt.
+
+**Överföringen av spelet "Gissa numret" in  i me-sida**  
+Jag tyckte det var inte så lätt att få in koden fördelad på de olika routerna. Hade
+långvariga svårigheter, när jag försökte få CHEAT-funktionen att fungera. Problemet
+visade sig vara den här "lilla" detaljen:
+I if-satsen som skulle skicka $doCheat som sessions-variabel till "guess/play",
+har jag skrivit '$doCheat = ...SESSION["doCheat"]', istället för: '...SESSION["doCheat"] = $doCheat'.
+
+**Att skriva kod utanför och inuti ramverket**  
+Inuti ramverket - så länge man inte har greppat hela / stora delar av strukturen, så är
+det är inte lätt att få koden att göra som man vill. Det var inte mycket kvar
+att fixa i Gissa-numret-spelet, efter Mikaels videogenomgång, men det krävdes ändå
+en del tid, tills bitarna fallit på plats och rätt kod fick rätt placering.
+
+**TIL för detta kmom**  
+TIL för kmom02: hur elementen i Gissa-numrets kod hänger ihop med varandra när man
+fördelat dem mellan de olika routes inom ramverket.
+(Och hur man gråar ut doGess-knappen, när rätt svar skrivits in, eller när antalet
+gissningsförsök har blivit 0).
